# sugarcube-discovery

./: .babelrc  .eslintrc  .gitignore  .huskyrc  .lintstagedrc  Cargo.toml  README.md  cosmos.config.json  manifest.js  package.json  postcss.config.js  tsconfig.json  webpack.config.js  webpack.cosmos.js
__fixtures__/: ContentPreservation.tsx  Footer.tsx  Header.tsx  HelloWorld.tsx  Popup.tsx  PreservationProcess.tsx  ProjectPreferences.tsx  ShowCreateProject.tsx  ShowProject.tsx  buttons.tsx
__fixtures__/options/: show-create-project.tsx  show-project.tsx
__fixtures__/popup/: ContentHeader.tsx
src/: projects.ts  utils.ts
src/components/: Preferences.tsx  ProjectItem.tsx  ProjectPreferences.tsx  ProjectShow.tsx
src/js/: facebook.ts  machines.ts  projects.ts  styles.css  twitter.ts  types.ts  utils.ts  youtube.ts
src/js/components/: Button.tsx  ContentHeader.tsx  ContentPreservation.tsx  Footer.tsx  Header.tsx  HelloWorld.tsx  Popup.tsx  PreservationProcess.tsx  ProjectCreate.tsx  ProjectItem.tsx  ProjectList.tsx  ProjectPreferences.tsx  ProjectShow.tsx
src/js/components/preservation/: SelectProjects.tsx
src/js/options/: options.html  options.tsx
src/js/popup/: popup.html  popup.tsx
src/options/: options.html  options.tsx
src/popup/: popup.html  popup.tsx
src/rs/: handlers.rs  main.rs
src/sql/: create_query.sql
test/: ContentHeader.tsx  ContentPreservation.tsx  ProjectItem.tsx  ProjectShow.tsx  facebook.ts  twitter.ts  youtube.ts
