[package]
name = "sugarcube-discovery"
version = "0.1.0"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-cors = "0.1.0"
validator = "0.10"
validator_derive = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.6"
failure_derive = "0.1.6"
rusqlite = "0.20.0"
log = "0.4.8"
env_logger = "0.7.1"

[[bin]]
name = "sugarcube-discovery"
path = "src/rs/main.rs"
